tests/type/bad/recur_wrong_count.hel
foreign io_unit: IO<()>;

x = loop (a = 0) {
    recur(a, 1)
};

main = io_unit;
